fix spacing

--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ body {
 }
 
 .step-space {
-    height: 50px;
+    height: 30px;
 }
 
 .h-space {
